[metadata]
name = requirements_txt_fixer
version = 1.0.0
description = A tool (and pre-commit hook) to automatically fix requirements.txt.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kosaaaaa/requirements-txt-fixer
author = Kosaaaaa
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = requirements_txt_fixer
python_requires = >=3.11

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    requirements-txt-fixer = requirements_txt_fixer:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[isort]
profile = black
add_imports = from __future__ import annotations

[ruff]
select =
    E
    W
    F
    C
    B
ignore =
    E501

[black]
line-length = 120
target-version =
    py311

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
